linux-hosting/etc_iptables_rules.v4
# Generated by xtables-save v1.8.2 on Mon May 30 08:00:01 2022
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -p tcp -m tcp --sport 22 -j MARK --set-xmark 0x2/0xffffffff
-A POSTROUTING ! -d 192.168.1.0/24 -p tcp -m tcp --sport 443 -j MARK --set-xmark 0x3/0xffffffff
COMMIT
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A POSTROUTING -o tun+ -j MASQUERADE
COMMIT
# Completed on Mon May 30 08:00:01 2022
# Generated by xtables-save v1.8.2 on Mon May 30 08:00:01 2022
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s 172.16.0.0/12 -i tun+ -j DROP
-A INPUT -s 192.168.0.0/16 -i tun+ -j DROP
-A INPUT -s 169.254.0.0/16 -i tun+ -j DROP
-A INPUT -s 127.0.0.0/8 -i tun+ -j DROP
-A INPUT -p tcp -m conntrack --ctstate NEW -m limit --limit 4/sec -m tcp --dport 443 -j ACCEPT
-A INPUT -s 192.168.1.0/24 -p tcp -m multiport --dports 22,25,80,443,8000,111,2049 -j ACCEPT
-A INPUT -p udp -m multiport --dports 123,5353 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 21,22,25,143,965,993 -j DROP
-A INPUT -s 192.168.1.0/24 -p icmp -j ACCEPT
-A INPUT -m conntrack --ctstate NEW -j DROP
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m conntrack --ctstate INVALID -j DROP
-A FORWARD -d 172.16.0.0/12 -o tun+ -j DROP
-A FORWARD -d 192.168.0.0/16 -o tun+ -j DROP
-A FORWARD -d 169.254.0.0/16 -o tun+ -j DROP
-A FORWARD -d 127.0.0.0/8 -o tun+ -j DROP
-A FORWARD -o tun+ -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -d 192.168.1.0/24 -p tcp -m multiport --dports 22,80,8000,111,2049 -j ACCEPT
-A OUTPUT -d 192.168.1.0/24 -p udp -m multiport --dports 53,123,5353 -j ACCEPT
-A OUTPUT -d 192.168.1.0/24 -p tcp -j DROP
-A OUTPUT -d 192.168.1.0/24 -p udp -j DROP
-A OUTPUT -d 192.168.1.0/24 -p icmp -j ACCEPT
-A OUTPUT -d 192.168.1.0/24 -p tcp --sport 22 -j ACCEPT
-A OUTPUT -m conntrack --ctstate NEW -j ACCEPT
COMMIT
# Completed on Mon May 30 08:00:01 2022
#-A INPUT -m set --match-set blacklist src -j DROP
