linux-hosting/etc_iptables_rules.v6
# Generated by xtables-save v1.8.2 on Mon May 30 08:00:01 2022
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Mon May 30 08:00:01 2022
# Generated by xtables-save v1.8.2 on Mon May 30 08:00:01 2022
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -p tcp -m tcp --sport 443 -j MARK --set-xmark 0x6/0xffffffff
COMMIT
# Completed on Mon May 30 08:00:01 2022
# Generated by xtables-save v1.8.2 on Mon May 30 08:00:01 2022
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:AllowICMPs - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i enp0s8 -p ipv6-icmp -j DROP
-A INPUT -s fe80::/10 -j ACCEPT
-A INPUT -i enp0s3 -p tcp -m conntrack --ctstate NEW -m limit --limit 240/min --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j DROP
-A INPUT -p ipv6-icmp -j AllowICMPs
-A INPUT -m conntrack --ctstate NEW -j DROP
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -m rt --rt-type 0 --rt-segsleft 0 -j DROP
-A INPUT -d ff00::/8 -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o enp0s8 -p ipv6-icmp -j DROP
-A OUTPUT -d fe80::/10 -j ACCEPT
-A OUTPUT -m conntrack --ctstate NEW -j ACCEPT
-A OUTPUT -p ipv6-icmp -m limit --limit 10/sec -j ACCEPT
-A OUTPUT -m rt --rt-type 0 --rt-segsleft 0 -j DROP
-A AllowICMPs -p ipv6-icmp -m icmp6 --icmpv6-type 1 -j ACCEPT
-A AllowICMPs -p ipv6-icmp -m icmp6 --icmpv6-type 2 -j ACCEPT
-A AllowICMPs -p ipv6-icmp -m icmp6 --icmpv6-type 3 -j ACCEPT
-A AllowICMPs -p ipv6-icmp -m icmp6 --icmpv6-type 4 -j ACCEPT
-A AllowICMPs -p ipv6-icmp -m icmp6 --icmpv6-type 128 -m limit --limit 10/sec -j ACCEPT
-A AllowICMPs -p ipv6-icmp -m icmp6 --icmpv6-type 129 -m limit --limit 10/sec -j ACCEPT
-A AllowICMPs -p ipv6-icmp -m icmp6 --icmpv6-type 133 -m limit --limit 10/sec -j ACCEPT
-A AllowICMPs -p ipv6-icmp -m icmp6 --icmpv6-type 134 -m limit --limit 10/sec -j ACCEPT
-A AllowICMPs -p ipv6-icmp -m icmp6 --icmpv6-type 135 -m limit --limit 10/sec -j ACCEPT
-A AllowICMPs -p ipv6-icmp -m icmp6 --icmpv6-type 136 -m limit --limit 10/sec -j ACCEPT
-A AllowICMPs -p ipv6-icmp -m icmp6 --icmpv6-type 137 -m limit --limit 10/sec -j ACCEPT
COMMIT
# Completed on Mon May 30 08:00:01 2022
